# bailing

./: .dockerignore  .gitignore  Dockerfile  README.md  README_en.md  Taskfile.example.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-build-app.yml  docker-build-builder.yml  docker-build-server.yml
bailing/: __init__.py  asr.py  dialogue.py  llm.py  memory.py  player.py  rag.py  recorder.py  robot.py  tts.py  utils.py  vad.py
bailing/utils/: json_loads.py
config/: config.yaml  github-copilot-mcp.example.json
docker/: README.md  dockerfile.dev
documents/: README.md
models/: README.md
plugins/: function_manager.py  registry.py  task_manager.py
plugins/functions/: aigc_manus.py  get_day_of_week.py  get_weather.py  ielts_speaking_practice.py  open_application.py  schedule_task.py  search_local_documents.py  web_search.py
reload_dll/: reload.py  reload_linux.py  reload_windows.py
server/: Dockerfile.server  requirements.txt  server.py
server/templates/: index.html
