[project]
name = "bailing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chattts>=0.2.4",
    "edge-tts>=7.0.2",
    "litestar>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "funasr>=1.2.6",
    "gtts>=2.5.4",
    "kokoro>=0.9.4",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.23",
    "langchain-text-splitters>=0.3.8",
    "langchain>=0.3.25",
    "numpy>=2.2.6",
    "openai>=1.86.0",
    "playsound3>=3.2.4",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "sentence-transformers>=4.1.0",
    "protobuf>=3.20.3",
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
